2009-12-10  Christos Zoulas <christos@zoulas.com>
	* amfs_generic_lookup_child() tries to find an alternate
	  file server if it detects that the current one is down.
	  However, in the comparison used to decide if a possible
	  mount is the same as the current one it compares the am_loc
	  pointers instead of the actual mntfs pointers. Since
	  amfs_lookup_one_location() creates a brand new am_loc
	  structure for the returned mntfs structure the am_loc
	  pointer will be different even if the mntfs it's pointing
	  to is the same.
	  This tricks amfs_generic_lookup_child() think it has
	  found an alternate file server while it hasn't and thus
	  starts multiple racing mounts for the very same node and
	  mntfs.
	  From: Krisztian Kovacs <Kris.Kovacs@morganstanley.com>

	* In the new am_loc scheme mounted mntfs structures still
	  have their mf_fo structure left intact. So when restart
	  creates a fake mntfs for an already mounted filesystem it
	  should not free mf_fo right away.
	  From: Krisztian Kovacs <Kris.Kovacs@morganstanley.com>

	* Setting the error flag of the mntfs for which the share
	  is already mounted results in the mount point not being
	  removed when it times out. (Amd considers it an error
	  mntfs and thus umount becomse a no-op.)
	  From: Krisztian Kovacs <Kris.Kovacs@morganstanley.com>

	* Right now AMD sets all timeout values to their defaults
	  even if you explicitly set them to zero. This patch
	  introduces separate flags that store if the respective
	  values have been set and the code path setting default
	  values checks these flags instead of testing the values
	  for zero. [Linux only]
	  From: Krisztian Kovacs <Kris.Kovacs@morganstanley.com>

	* Fix mntfs related lookup/(un)mount race conditions, by
	  introducing a new structure linking an mntfs to a node.
	  From: Krisztian Kovacs <Kris.Kovacs@morganstanley.com>

	* We have to free the buffers allocated by the XDR routines when